# sandbox

./: .gitignore  ARCHITECTURE.md  ASSIMP_SETUP.md  AUTOMATED_SETUP_SUMMARY.md  CMakeLists.txt  FBX_IMPLEMENTATION_SUMMARY.md  LICENSE  MESHIMPORTER_COMPLETE.md  README.md  SETUP_README.md  UpgradeLog.htm  build_wasm.bat  quick_setup.bat  serve_wasm.bat
docs/: Entity_CreateDestroy_UndoRedo.md  ModifierKeys_Usage.md  PopupWindow_BlockingConfirmation.md  PopupWindow_BlockingQuickRef.md  Scene_Serialization_SelectionArchive.md
emscripten/: CMakeLists.txt  build_and_serve_wasm.bat  build_and_serve_wasm_release.bat  build_wasm.bat  serve_wasm.bat  shell_minimal.html
premake/: premake5.lua  quick_setup.bat  runPremake_visualStudio.bat  setup_assimp.bat
resources/: startup-scene.scene
resources/fbx/: creature.scene  fbxScene.scene  test.scene
source/: Application.cpp  Application.h  IApplicationLayer.h  SceneApplicationLayer.cpp  SceneApplicationLayer.h  Window.cpp  Window.h  main.cpp  pch.h
source/app/: PreseedEditAndContinue.cpp  PreseedEditAndContinue.h  main.cpp  pch.h
source/app/EditorLayer/: EditorApplicationLayer.cpp  EditorApplicationLayer.h  MainMenu.cpp  MainMenu.h  OpenDocumentsTopBar.h
source/app/EditorLayer/panels/: Panel_SceneHierarchy.cpp  Panel_SceneHierarchy.h
source/app/UILayer/: MainMenu.h  UIApplicationLayer.cpp  UIApplicationLayer.h
source/app/UILayer/panels/: Panel_SceneHierarchy.cpp  Panel_SceneHierarchy.h
source/app/applicationLayers/: Panel_SceneHierarchy.h  SceneApplicationLayer.cpp  SceneApplicationLayer.h  UIApplicationLayer.cpp  UIApplicationLayer.h
source/app/editorLayer/: CameraController.cpp  CameraController.h  EditorContext.cpp  EditorContext.h  InitImGuiStyles.cpp  InitImguiStyles.h  ManipulatorGizmos.cpp  OpenDocumentsTopBar.cpp  PopupManager.cpp  PopupManager.h  PopupWindow.cpp  PopupWindow.h  PropertiesBar.cpp  PropertiesBar.h
source/app/editorLayer/panels/: Panel_ComponentView.cpp  Panel_ComponentView.h
source/app/event/: EditorEvent.h  SceneEvent.h  UndoEvent.h
source/app/importer/: MeshImporter.cpp  MeshImporter.h
source/app/loggingLayer/: LoggingApplicationLayer.cpp  LoggingApplicationLayer.h
source/app/sceneLayer/: Entity.cpp  Entity.h  FbxPlayer.cpp  FbxPlayer.h  Scene.cpp  Scene.h  SceneApplicationLayer.cpp  SceneApplicationLayer.h  SceneManager.cpp  SceneManager.h  TransformBundle.h
source/app/sceneLayer/components/: ComponentSerialization.h  Components.h  SetupComponentGroups.h
source/app/sceneLayer/shape/: BezierCurve.cpp  BezierCurve.h  Circle.cpp  Circle.h  IShape.h
source/core/: .github-copilot.md  Application.cpp  Application.h  BrowserWindow.cpp  BrowserWindow.h  IApplicationLayer.h  LayerContext.h  Logger.cpp  Logger.h  Platform.h  Registry.h  UUID.cpp  UUID.h  Window.cpp  Window.h
source/core/applicator/: Applicator.h  Clipboard.h  SelectionArchive.h  UndoManager.h  UndoManagerImpl.h
source/core/event/: ApplicationEvent.h  EventBus.h  IEvent.h  KeyEvent.h  MouseEvent.h
source/core/importer/: MeshImporter.cpp  MeshImporter.h
source/core/memory/: SelectionArchive.h
source/core/reflection/: Reflection.h  Reflection.hpp  ReflectionImpl.h  reflectionPathParser.h  reflectionPathParser.hpp
source/core/renderer/: DrawCommand.h  DrawCommandRecorder.h  IMesh.h  IRenderer.h  Renderer_ImGui.cpp  Renderer_ImGui.h  Renderer_OpenGL.cpp  Renderer_OpenGL.h
source/core/serializer/: Serializer.h
source/core/undo/: Applicator.h  Applicator.hpp  ChangeApplicator.h  Clipboard.h  InternalApplicator.hpp  InternalApplicatorImpl.hpp  Patch.hpp  Undo.h  UndoManager.h  UndoManager.hpp  UndoManagerImpl.h  UndoManagerImpl.hpp  UndoableCommand.h  UndoableCommand.hpp
source/renderer/: BezierRenderPath.h  DrawCommand.h  DrawCommandBuffer.h  DrawCommandRecorder.h  IRenderer.h  Renderer_ImGui.cpp  Renderer_ImGui.h
source/scene/: Scene.h
source/scene/shape/: BezierCurve.cpp  BezierCurve.h  Circle.cpp  Circle.h  IShape.h
source/shape/: BezierCurve.cpp  BezierCurve.h  Circle.h  IShape.h  Shape.h
source/tests/: ITestScene.h  TestScene1.h
(+11 files in other folders)
